src/css/style.css
@import url('./reset.css');

/* Global */
:root {
  --light-gray: #e0e0e0;
  --light-gray-2: #bebcba;
  --gray: #808080;
  --dark-gray: #3f3e3e;
  --yellow: #f5c300;
  --light-yellow: #f6d846;
  --blue: #0265bb;
  --orange: #d96b4c;
  --white: #fcfcfc;
}

* {
  box-sizing: border-box;
  text-decoration: none;
}

button {
  cursor: pointer;
  font-family: inherit;
}

body {
  background-image: url('/src/public/i/others/app-background-plate.png');
  background-repeat: repeat;
  font-family: 'Roboto Condensed', sans-serif;
  list-style-type: none;
}

/* Page laoyout*/

.home-page {
  display: grid;
  grid-template-areas:
    'home-page__header home-page__header'
    'home-page__nav home-page__content'
    'cart home-page__content';
  grid-template-columns: minmax(max-content, 20%) 1fr;
  grid-template-rows: auto auto 1fr;
  padding: 2rem 1rem;
}

.home-page__header {
  grid-area: home-page__header;
  display: flex;
  justify-content: center;
  margin-bottom: 1.5rem;
}

.home-page__nav {
  grid-area: home-page__nav;
  justify-self: center;
  height: fit-content;
}

.home-page__cart {
  grid-area: cart;
  justify-self: center;
  height: fit-content;
  margin-top: 3rem;
}

.home-page__content {
  grid-area: home-page__content;
  padding: 0.5rem 2rem;
}

/* Header */

.header__text {
  display: inline;
  width: fit-content;

  font-size: 2.4rem;
  font-weight: 500;
  text-transform: uppercase;
  color: var(--dark-gray);
}

/* Modal */

.product-modal {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  position: fixed;
  top: 0;
  left: 0;
  display: none;
  z-index: 2;

  display: flex;
  justify-content: center;
  align-items: center;
}

.product-modal__opened {
  display: flex;
}

.product-modal__container {
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: clip;
  width: 870px;
  max-height: 90vh;
  margin-top: 10vh;
  background-color: var(--light-gray);
  border-radius: 0.5rem;
}

.product-modal__container::-webkit-scrollbar {
  display: none;
}

.product-modal__header,
.product-modal__footer {
  min-height: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.product-modal__header {
  position: relative;
  background-color: var(--yellow);
  color: var(--white);
}

.product-modal__header h2 {
  font-size: 1.6rem;
  font-weight: 700;
  height: fit-content;
}

.product-modal__close-button {
  position: absolute;
  top: 0;
  right: 0;
}

.product-modal__content {
  flex-grow: 1;
  padding: 2rem 1.5rem 1.5rem;
}

.product-modal__footer {
  background-color: var(--white);
  color: var(--orange);
}

.product-modal__footer {
  font-size: 1.6rem;
  font-weight: 700;
  height: fit-content;
}

.product-modal-nav__list {
  display: flex;
  overflow: hidden;
  background-color: var(--white);
  width: fit-content;
  height: fit-content;
  margin: 0 auto;
  border-radius: 6px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 5px;
}

.product-modal-options {
  margin-top: 2rem;
}

.product-modal-nav__item {
  cursor: pointer;
  text-transform: capitalize;
  font-size: 1.4rem;
  font-weight: 700;
  padding: 1rem 2rem;
  color: var(--dark-gray);
}

.product-modal-nav__item--active {
  background-color: var(--orange);
  color: var(--white);
}

.options-fieldset {
  display: none;
}

.options-fieldset--active {
  display: block;
}

.options-fieldset__list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  width: fit-content;
  margin: 0 auto;
}

.options-fieldset__item {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: fit-content;
  padding: 2rem;
  border-radius: 0.5rem;
  gap: 0.8rem;
}

.options-fieldset__item--selected {
  background: var(--yellow);
}

.options-fieldset__item--selected .product-card__photo {
  box-shadow: none;
}

.product-card-info__divider {
  border-top: 3px solid var(--gray);
  width: 100%;
  margin: 0;
}

.visually-hidden:not(:focus):not(:active),
input[type='checkbox'].visually-hidden,
input[type='radio'].visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

